--- a/test.html
+++ b/test.html
@@ -290,8 +290,7 @@
 
             <!-- Variation 2: Dark Theme with Stats -->
             <h3 class="text-lg font-medium text-gray-300 mb-4">Variation 2: Dark Theme with Stats</h3>
-            
-
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mb-8">
                 <div class="card-hover">
                     <div class="bg-gray-900 border border-gray-700 rounded-2xl p-8 flex items-center space-x-6 shadow-2xl">
                         <div class="relative">
@@ -434,8 +433,17 @@
                             <p class="text-sm opacity-90 mb-4">Workplace safety champion</p>
                             <div class="flex justify-between items-center">
                                 <div class="flex space-x-2">
-                                    <div
-
+                                    <div class="w-2 h-2 bg-white rounded-full"></div>
+                                    <div class="w-2 h-2 bg-white/50 rounded-full"></div>
+                                    <div class="w-2 h-2 bg-white/30 rounded-full"></div>
+                                </div>
+                                <button class="px-4 py-2 bg-white/20 rounded-full text-sm hover:bg-white/30 transition-colors">View More</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
